Fix output adjacent, gathering ritual.